name:                tree-dye
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/antalsz/tree-dye#readme
license:             BSD3
license-file:        LICENSE
author:              Antal Spector-Zabusky
maintainer:          antal.b.sz@gmail.com
copyright:           Copyright © 2017 Antal Spector-Zabusky
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/antalsz/tie-dye

library
  exposed-modules:     TreeDye.CLI
                     , TreeDye.CLI.Parsing
                     , TreeDye.CLI.Types
                     , TreeDye.Output.Distances
                     , TreeDye.Tree.RandomSpanningTree
                     , TreeDye.Graph.Interface
                     , TreeDye.Graph.AdjacencyMap
                     , TreeDye.Graph.Grid
                     , TreeDye.Pick
                     , TreeDye.Util.Function
                     , TreeDye.Util.List
                     , TreeDye.Util.Colour
                     , TreeDye.Util.Random
                     , TreeDye.Util.String
  
  other-extensions:    GADTs, TypeFamilies, FlexibleContexts
                     , ScopedTypeVariables, TypeApplications
                     , ViewPatterns, BangPatterns, RecordWildCards
                     , TupleSections, LambdaCase, MultiWayIf
                     , StandaloneDeriving, GeneralizedNewtypeDeriving
  
  -- Warnings: bounds are PVP-conformant guesses based on what's on my system
  build-depends:       base                 == 4.10.*
                     , array                == 0.5.*
                     , containers           == 0.5.*
                     , random               == 1.1.*
                     , MonadRandom          == 0.5.*
                     , colour               == 2.3.*
                     , JuicyPixels          == 3.2.*
                     , optparse-applicative == 0.14.*
                     , megaparsec           == 6.1.*

  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -O2

executable tree-dye
  main-is:             Main.hs
  build-depends:       base, tree-dye
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
